# relx

./: README.md  pyproject.toml
.github/workflows/: ci.yml
config_files/: config.yaml
src/relx/: __init__.py  __main__.py  artifacts.py  cli.py  exceptions.py  models.py  packages.py  requests.py  reviews.py  users.py
src/relx/providers/: __init__.py  base.py  gitea_review.py  obs.py  obs_artifact.py  obs_package.py  obs_review.py  obs_user.py  params.py
src/relx/utils/: logger.py  tools.py
tests/: test_artifacts.py  test_cli.py  test_gitea_review_provider.py  test_obs_package_provider.py  test_obs_provider.py  test_obs_review_provider.py  test_obs_user_provider.py  test_packages.py  test_reviews.py  test_users.py
