[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "relx"
dynamic = ["version"]
authors = [
  { name="Gustavo Yokoyama Ribeiro", email="gyr@keemail.me" },
]
description = "Release eXtension for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["suse", "release", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "argcomplete",
    "python-dotenv",
    "rich",
    "lxml",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "build",
    "types-PyYAML",
    "lxml-stubs",
]

[project.urls]
Homepage = "https://github.com/gyr/relx"
Documentation = "https://relx.readthedocs.io/"
"Bug Tracker" = "https://github.com/gyr/relx/issues"

[project.scripts]
relx = "relx.cli:main"

[tool.setuptools.packages.find]
where = ["src"] # Tell setuptools to look for packages in the src directory

[tool.setuptools]
# Exclude tests from the package distribution
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "relx.__version__"}